# resolve-avahi-compat

./: .gitignore  README.md  example-browse.c  example-publish.c  ga-client.c  ga-client.h  ga-entry-group.c  ga-entry-group.h  ga-enums.c  ga-enums.h  ga-error.c  ga-error.h  ga-record-browser.c  ga-record-browser.h  ga-service-browser.c  ga-service-browser.h  ga-service-resolver.c  ga-service-resolver.h  meson.build  meson_options.txt  resolve-avahi-compat.h
avahi-client/: client.h  lookup.h  publish.h
avahi-common/: address.h  cdecl.h  defs.h  error.h  gccmacro.h  malloc.h  strlst.h  watch.h
avahi-glib/: glib-malloc.h  glib-watch.h
avahi-gobject/: ga-client.h  ga-entry-group.h  ga-enums.h  ga-error.h  ga-record-browser.h  ga-service-browser.h  ga-service-resolver.h
